--- a/tex/mcqmc-paper/kuramoto.bib
+++ b/tex/mcqmc-paper/kuramoto.bib
@@ -28,6 +28,24 @@ pages = "87-98",
 number = "2",
 month = "April"}
 
+@article {COMBTAUS,
+author = "P. L'Ecuyer",
+title = "Maximally equidistributed combined Tausworthe generators",
+journal = "Math. Comp.",
+volume = "65",
+year = "1996",
+pages = "203-213",
+number = "213"}
+
+@article {COMBLFSR,
+author = "P. L'Ecuyer",
+title = "Tables of maximally equidistributed combined LFSR generators",
+journal = "Math. Comp.",
+volume = "68",
+year = "1999",
+pages = "261-269",
+number = "225"}
+
 @article {CLT,
 author = "R. Couture and P. L'Ecuyer and S. Tezuka",
 title = "On the distribution of k-dimensional  vectors for simple and combined {Tausworthe} sequences",
@@ -58,6 +76,18 @@ year = "2005",
 pages = "346-361",
 number = "4",
 }
+
+@article {TESTU01,
+author = "P. L'Ecuyer and R. Simard",
+title = "{TestU01}: {A} {C} library for empirical testing
+of random number generators",
+journal = "ACM Transactions on Mathematical Software",
+year = "2006",
+note = "to appear",
+}
+%pages = "346-361",
+%number = "4",
+%volume = "15",
 
 @article {XORSHIFT-MAR,
 author = "G. Marsaglia",
@@ -224,7 +254,7 @@ year = "1998",
 pages = "3-30",
 number = "1",
 month = jan,
-note = "{\tt http://www.math.sci.hiroshima-u.ac.jp/\~{}m-mat/MT/emt.html}"
+note = "\url{http://www.math.sci.hiroshima-u.ac.jp/~m-mat/MT/emt.html}"
 }
 
 @inproceedings{DC,
@@ -254,7 +284,7 @@ journal = "Mathematics and Computers in Simulation",
 volume = "62",
 year = "2003",
 pages = "431-442",
-number = "3-61"
+number = "3-6"
 }
 
 @article{PMT,
@@ -422,3 +452,8 @@ year = 1980,
 publisher = "ACM",
 address = "New York",		  
 pages = "24--31"}
+
+@misc{wiki:endian,
+key = "wiki",
+title = "{Endianness} From {Wikipedia}, the free encyclopedia",
+howpublished ="\url{http://en.wikipedia.org/wiki/Endianness}"}
